<resources>
    <string name="app_name">DemoPlot</string>

    <string name="start_title">Start</string>
    <string name="stop_title">Stop</string>
    <string name="action_settings">Settings</string>

    <string name="free_move">Перемещение сцены</string>
    <string name="free_move_summary_on">Изменение маштаба и координат камеры включено</string>
    <string name="free_move_summary_off">Изменение маштаба и координат камеры выключено</string>
    <string name="noise">Шум</string>
    <string name="noise_summary_on">Шум в данные добавляется</string>
    <string name="noise_summary_off">Шум в данные не добавляется</string>

    <string name="source_title">Источник данных</string>

    <string-array name="sources">
        <item>Линейная функция</item>
        <item>Квадратичная функция</item>
        <item>Функция Гаусса</item>
    </string-array>
    <string-array name="sources_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
</resources>
