<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference
        android:key="free_move"
        android:persistent="true"
        android:summaryOn="@string/free_move_summary_on"
        android:summaryOff="@string/free_move_summary_off"
        android:title="@string/free_move"></CheckBoxPreference>

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="noise"
        android:persistent="true"
        android:summaryOn="@string/noise_summary_on"
        android:summaryOff="@string/noise_summary_off"
        android:title="@string/noise"></CheckBoxPreference>

    <PreferenceCategory android:title="Источник данных">
        <ListPreference
            android:defaultValue="3"
            android:entries="@array/sources"
            android:entryValues="@array/sources_values"
            android:key="listOfSources"
            android:title="@string/source_title"/>
    </PreferenceCategory>

</PreferenceScreen>